compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_print_aliased_imported_generic_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport gleam/option.{type Option as Maybe}\n\nconst none: Maybe(Int) = option.None\n"
---
import gleam/option.{type Option as Maybe}

const none: Maybe(Int) = option.None
▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔              


----- Hover content -----
Scalar(
    String(
        "```gleam\nconst none: Maybe(Int) = option.None\n```\n",
    ),
)
