compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_print_qualified_prelude_type_when_shadowed_by_alias.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\ntype Result = #(Bool, String)\nconst ok = Ok(10)\n"
---
type Result = #(Bool, String)
const ok = Ok(10)
▔▔▔▔▔▔▔↑         


----- Hover content -----
Scalar(
    String(
        "```gleam\nconst ok: gleam.Result(Int, a) = Ok(10)\n```\n",
    ),
)
