compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_print_qualified_prelude_type_when_shadowed_by_imported_alias.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport alias.{type Bool}\nconst value = True\n"
---
import alias.{type Bool}
const value = True
▔▔▔▔▔▔↑▔▔▔▔       


----- Hover content -----
Scalar(
    String(
        "```gleam\nconst value: gleam.Bool = True\n```\n",
    ),
)
