compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_shadowed_prelude_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\ntype Int { Int }\nconst number = 100\n"
---
type Int { Int }
const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content -----
Scalar(
    String(
        "```gleam\nconst number: gleam.Int = 100\n```\n",
    ),
)
