compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_shadowed_prelude_type_imported.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport numbers.{type Int}\nconst number = 100\n"
---
import numbers.{type Int}
const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content -----
Scalar(
    String(
        "```gleam\nconst number: gleam.Int = 100\n```\n",
    ),
)
