compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_type_alias_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\ntype Wibble = Int\n"
---
type Wibble = Int
              ▔↑▔


----- Hover content -----
Scalar(
    String(
        "```gleam\nInt\n```\n",
    ),
)
