compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_type_constructor.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\ntype Wibble {\n    /// Some more exciting documentation\n    Wibble(arg: String)\n    /// The most exciting documentation\n    Wobble(Int)\n}\n"
---
/// Exciting documentation
/// Maybe even multiple lines
type Wibble {
    /// Some more exciting documentation
    Wibble(arg: String)
    ↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    /// The most exciting documentation
    Wobble(Int)
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nWibble(arg: String)\n```\n Some more exciting documentation",
    ),
)
