compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_type_constructor_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\ntype Wibble {\n    Wibble(arg: String)\n}\n"
---
type Wibble {
    Wibble(arg: String)
                ▔▔▔▔↑▔ 
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nString\n```\n",
    ),
)
